--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,165 +1,237 @@
-.page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  .container {
+      width: 970px;
+   }
+}
+.row {
   display: grid;
-  grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
+  grid-template-columns: repeat(12, 1fr);
 }
 
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-  }
+/* Props */
+#dhead {
+  margin-top: 20px;
 }
-
-.main {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
+#dpic {
+  grid-column: span 6;
+  text-align: right;
 }
-
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
+#ddesc {
+  padding-top: 40px;
+  padding-left: 20px;
+  grid-column: span 6;
 }
-
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
-}
-
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
-.ctas {
-  display: flex;
-  gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition: background 0.2s, color 0.2s, border-color 0.2s;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
-}
-
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
-}
-
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 180px;
-}
-
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.footer img {
-  flex-shrink: 0;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
-}
-
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
-  .main ol {
+@media (max-width: 991px) {
+  #dpic {
+    grid-column: span 12;
     text-align: center;
   }
-
-  .ctas {
-    flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+  #ddesc {
+    grid-column: span 12;
+    padding-top: 20px;
+    text-align: center;
   }
 }
-
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
+.h1c {
+  font-size: 34px;
+  font-weight: normal;
+  padding: 0;
+  margin: 0;
+}
+.h2 {
+  font-weight: normal;
+  font-style: italic;
+  color: #999;
+  font-size: 18px;
+  padding: 0;
+  margin: 5px 0 10px 0;
+}
+@media (min-width: 992px) {
+  .h2 {
+      max-width: 300px;
   }
+}
+#dpic img {
+  width: 240px;
+  height: 240px;
+  border-radius: 120px;
+}
+.iico {
+  width: 40px;
+  height: 40px;
+}
+#demail {
+  margin-top: 10px;
+  color: #555;
+  opacity: 0;
+  transition: opacity 0.7s;
+}
+.hrCustom {
+  height: 1px;
+  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  padding: 0;
+  margin: 20px 0;
+  border: 0;
+}
+.ico {
+  grid-column: span 1;
+  vertical-align: top;
+  border-left: 2px solid #cfcfcf;
+  position: relative;
+}
+.ico img {
+  border-radius: 5px;
+  width: 100%;
+  max-width: 80px;
+  margin-left: 10px;
+}
+.desc {
+  grid-column: span 10;
+  vertical-align: top;
+  font-size: 17px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+}
+.entry {
+}
+.entry-dot {
+  position: absolute;
+  top: 0px;
+  left: -8px;
+  width: 10px;
+  height: 10px;
+  border-radius: 7px;
+  background-color: #cfcfcf;
+  border: 2px solid white;
+}
+.timespan {
+  grid-column: span 1;
+  font-size: 14px;
+  text-align: right;
+  padding-right: 5px;
+  color: #bbb;
+}
+.hassets {
+  position: relative;
+}
+@media (max-width: 991px) {
+  .hassets {
+      display: none;
+  }
+}
+.hasset {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+}
+.ctitle {
+  font-size: 36px;
+  margin-bottom: 20px;
+  margin-top: 40px;
+}
+#featured-talks .row {
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  padding-bottom: 30px;
+}
+.card {
+  grid-column: span 3;
+  vertical-align: top;
+  background-color: #eee;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  padding: 5px;
+  background-color: white;
+  padding-bottom: 10px;
+}
+@media (max-width: 991px) {
+  .card {
+      grid-column: span 6;
+  }
+  #featured-talks .row {
+      grid-column-gap: 5px;
+      grid-row-gap: 5px;
+  }
+}
+.card img {
+  border-radius: 5px;
+  width: 100%;
+}
+.cdesc {
+  height: 30px;
+  vertical-align: top;
+  margin-bottom: 10px;
+  font-size: 15px;
+}
+@media (max-width: 768px) {
+  .cdesc {
+      font-size: 14px;
+      padding-bottom: 10px;
+  }
+}
+#pet-projects .row {
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+}
+.project {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+.pico {
+  float: left;
+  margin-right: 10px;
+}
+.pdesc {
+}
+.pend {
+  clear: both;
+}
+.pico img {
+  height: 80px;
+  border-radius: 5px;
+  border: 1px solid #999;
+}
+.pub {
+  font-size: 14px;
+  border-left: 4px solid #aaa;
+  padding: 2px 0px 2px 10px;
+  margin-bottom: 10px;
+}
+.pub-title {
+  display: inline;
+  color: #333;
+}
+.pub-venue {
+  display: inline;
+  color: #090;
+}
+.pub-authors {
+  display: block;
+  color: #900;
+}
+.tul {
+  text-align: center;
+  padding: 0;
+}
+.til {
+  display: inline-block;
+  padding: 3px 15px 3px 15px;
+  margin-bottom: 5px;
+}
+.tilb {
+  border-right: 1px solid #ccc;
+}
+.nodot {
+  list-style-type: none;
+  padding-left: 0;
 }
